Fix module overflow

--- a/games/orange/theme/style.css
+++ b/games/orange/theme/style.css
@@ -271,7 +271,7 @@ div.al1, div.al2, div.asmlsqe, div.ab1 {
 }
 .module li a {
 	display: inline-block;
-	max-width: 150px;
+	max-width: 130px;
 	text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
